Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -916,7 +916,7 @@
   "pli-tv-kd17:5.5.28": "what’s contrary to the Monastic Law as being in accordance with it, ",
   "pli-tv-kd17:5.5.29": "what’s in accordance with the Monastic Law as contrary to it, ",
   "pli-tv-kd17:5.5.30": "what hasn’t been spoken by the Buddha as spoken by him, ",
-  "pli-tv-kd17:5.5.31": "what has been spoken by the Buddha as not spoken by the Buddha, ",
+  "pli-tv-kd17:5.5.31": "what’s been spoken by the Buddha as not spoken by him, ",
   "pli-tv-kd17:5.5.32": "what was not practiced by the Buddha as practiced by the Buddha, ",
   "pli-tv-kd17:5.5.33": "what was practiced by the Buddha as not practiced by the Buddha, ",
   "pli-tv-kd17:5.5.34": "what was not laid down by the Buddha as laid down by the Buddha, ",
