--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -918,7 +918,7 @@
   "pli-tv-kd17:5.5.30": "what hasn’t been spoken by the Buddha as spoken by him, ",
   "pli-tv-kd17:5.5.31": "what’s been spoken by the Buddha as not spoken by him, ",
   "pli-tv-kd17:5.5.32": "what wasn’t practiced by the Buddha as practiced by him, ",
-  "pli-tv-kd17:5.5.33": "what was practiced by the Buddha as not practiced by the Buddha, ",
+  "pli-tv-kd17:5.5.33": "what was practiced by the Buddha as not practiced by him, ",
   "pli-tv-kd17:5.5.34": "what was not laid down by the Buddha as laid down by the Buddha, ",
   "pli-tv-kd17:5.5.35": "what was laid down by the Buddha as not laid down by the Buddha, ",
   "pli-tv-kd17:5.5.36": "a non-offense as an offense, ",
