--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -919,7 +919,7 @@
   "pli-tv-kd17:5.5.31": "what’s been spoken by the Buddha as not spoken by him, ",
   "pli-tv-kd17:5.5.32": "what wasn’t practiced by the Buddha as practiced by him, ",
   "pli-tv-kd17:5.5.33": "what was practiced by the Buddha as not practiced by him, ",
-  "pli-tv-kd17:5.5.34": "what was not laid down by the Buddha as laid down by the Buddha, ",
+  "pli-tv-kd17:5.5.34": "what wasn’t laid down by the Buddha as laid down by him, ",
   "pli-tv-kd17:5.5.35": "what was laid down by the Buddha as not laid down by the Buddha, ",
   "pli-tv-kd17:5.5.36": "a non-offense as an offense, ",
   "pli-tv-kd17:5.5.37": "an offense as a non-offense, ",
