Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd17_translation-en-brahmali.json
@@ -920,7 +920,7 @@
   "pli-tv-kd17:5.5.32": "what wasn’t practiced by the Buddha as practiced by him, ",
   "pli-tv-kd17:5.5.33": "what was practiced by the Buddha as not practiced by him, ",
   "pli-tv-kd17:5.5.34": "what wasn’t laid down by the Buddha as laid down by him, ",
-  "pli-tv-kd17:5.5.35": "what was laid down by the Buddha as not laid down by the Buddha, ",
+  "pli-tv-kd17:5.5.35": "what what was laid down by the Buddha as not laid down by him, ",
   "pli-tv-kd17:5.5.36": "a non-offense as an offense, ",
   "pli-tv-kd17:5.5.37": "an offense as a non-offense, ",
   "pli-tv-kd17:5.5.38": "a light offense as heavy, ",
