--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd7_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd7_translation-en-brahmali.json
@@ -14,7 +14,7 @@
   "pli-tv-kd7:1.2.3": "“I hope you’re keeping well, monks, I hope you’re getting by. ",
   "pli-tv-kd7:1.2.4": "I hope you had a comfortable and harmonious rains, and got almsfood without trouble?” ",
   "pli-tv-kd7:1.2.5": "“We’re keeping well, Venerable Sir, we’re getting by. ",
-  "pli-tv-kd7:1.2.6": "We had a comfortable rains, lived together in harmony, and had no trouble getting almsfood.” ",
+  "pli-tv-kd7:1.2.6": "We had a comfortable rains, lived together in peace and harmony, and had no trouble getting almsfood.” ",
   "pli-tv-kd7:1.2.7": "They told the Buddha what had happened during the rains and while traveling to Sāvatthī. ",
   "pli-tv-kd7:1.3.1": "Soon afterwards the Buddha gave a teaching and addressed the monks: ",
   "pli-tv-kd7:1.3.2": "“I allow monks who have completed the rainy-season residence to participate in a robe-making ceremony. ",
