Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd7_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd7_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd7_translation-en-brahmali.json
@@ -12,7 +12,7 @@
   "pli-tv-kd7:1.2.1": "Since it is the custom for Buddhas to greet newly arrived monks, ",
   "pli-tv-kd7:1.2.2": "the Buddha said to them, ",
   "pli-tv-kd7:1.2.3": "“I hope you’re keeping well, monks, I hope you’re getting by. ",
-  "pli-tv-kd7:1.2.4": "I hope you had a comfortable and harmonious rains, and got almsfood without trouble?” ",
+  "pli-tv-kd7:1.2.4": "I hope you had a comfortable rains, that you lived together in peace and harmony, and got almsfood without trouble?” ",
   "pli-tv-kd7:1.2.5": "“We’re keeping well, Venerable Sir, we’re getting by. ",
   "pli-tv-kd7:1.2.6": "We had a comfortable rains, lived together in peace and harmony, and had no trouble getting almsfood.” ",
   "pli-tv-kd7:1.2.7": "They told the Buddha what had happened during the rains and while traveling to Sāvatthī. ",
