Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -1137,7 +1137,7 @@
   "pli-tv-kd4:17.10.1": "If, while you’re doing the invitation ceremony, a healthy monk cancels the invitation of a healthy monk, you should question and examine both and deal with them according to the rule. The Sangha should then continue the invitation ceremony.” ",
   "pli-tv-kd4:18.1.0": "26. Agreements about the invitation ceremony ",
   "pli-tv-kd4:18.1.1": "On one occasion in a certain monastery in the Kosalan country, a number of monks who were friends had entered the rainy-season residence together. ",
-  "pli-tv-kd4:18.1.2": "While living together in harmony, they were experiencing deep meditation. ",
+  "pli-tv-kd4:18.1.2": "While living together in peace and harmony, they were experiencing deep meditation. ",
   "pli-tv-kd4:18.1.3": "They considered this ",
   "pli-tv-kd4:18.1.5": "and thought, “If we do the invitation ceremony now, the monks might set out wandering. ",
   "pli-tv-kd4:18.1.6": "We’ll then lose this deep meditation. ",
