Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -1149,7 +1149,7 @@
   "pli-tv-kd4:18.3.2": "Everyone should gather in one place. ",
   "pli-tv-kd4:18.3.3": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd4:18.3.4": "‘Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd4:18.3.5": "While living together in harmony, we’re experiencing deep meditation. ",
+  "pli-tv-kd4:18.3.5": "While living together in peace and harmony, we’re experiencing deep meditation. ",
   "pli-tv-kd4:18.3.6": "If we do the invitation ceremony now, the monks might set out wandering. ",
   "pli-tv-kd4:18.3.7": "We’ll then lose this deep meditation. ",
   "pli-tv-kd4:18.3.8": "If it seems appropriate to the Sangha, the Sangha should make an agreement about the invitation ceremony: we’ll now do the observance-day ceremony and recite the Monastic Code, and we’ll do the invitation ceremony on the day of Komudī, the fourth full moon of the rainy season. ",
