Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -1155,7 +1155,7 @@
   "pli-tv-kd4:18.3.8": "If it seems appropriate to the Sangha, the Sangha should make an agreement about the invitation ceremony: we’ll now do the observance-day ceremony and recite the Monastic Code, and we’ll do the invitation ceremony on the day of Komudī, the fourth full moon of the rainy season. ",
   "pli-tv-kd4:18.3.9": "This is the motion. ",
   "pli-tv-kd4:18.4.1": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd4:18.4.2": "While living together in harmony, we have experienced deep meditation. ",
+  "pli-tv-kd4:18.4.2": "While living together in peace and harmony, we have experienced deep meditation. ",
   "pli-tv-kd4:18.4.3": "If we do the invitation ceremony now, the monks might set out wandering. ",
   "pli-tv-kd4:18.4.4": "We’ll then lose this deep meditation. ",
   "pli-tv-kd4:18.4.5": "The Sangha makes an agreement about the invitation ceremony: we’ll now do the observance-day ceremony and recite the Monastic Code, and we’ll do the invitation ceremony on the day of Komudī, the fourth full moon of the rainy season. ",
