--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pj/pli-tv-bu-vb-pj4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pj/pli-tv-bu-vb-pj4_translation-en-brahmali.json
@@ -10,7 +10,7 @@
   "pli-tv-bu-vb-pj4:1.1.3": "At that time Vajjī was short of food and afflicted with hunger, with crops affected by whiteheads and turned to straw. ",
   "pli-tv-bu-vb-pj4:1.1.4": "It was not easy to get by on almsfood. ",
   "pli-tv-bu-vb-pj4:1.1.5": "The monks considered the difficult circumstances, and they thought, ",
-  "pli-tv-bu-vb-pj4:1.1.6": "“How can we have a comfortable rains, and live in peace and harmony, ",
+  "pli-tv-bu-vb-pj4:1.1.6": "“How can we have a comfortable rains, live in peace and harmony, ",
   "pli-tv-bu-vb-pj4:1.1.7": "with no trouble getting almsfood?” ",
   "pli-tv-bu-vb-pj4:1.1.8": "Some said, ",
   "pli-tv-bu-vb-pj4:1.1.9": "“We could work for the householders, ",
