Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pj/pli-tv-bu-vb-pj4_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pj/pli-tv-bu-vb-pj4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pj/pli-tv-bu-vb-pj4_translation-en-brahmali.json
@@ -11,7 +11,7 @@
   "pli-tv-bu-vb-pj4:1.1.4": "It was not easy to get by on almsfood. ",
   "pli-tv-bu-vb-pj4:1.1.5": "The monks considered the difficult circumstances, and they thought, ",
   "pli-tv-bu-vb-pj4:1.1.6": "“How can we live in peace and harmony, have a comfortable rains, ",
-  "pli-tv-bu-vb-pj4:1.1.7": "and have no trouble getting almsfood?” ",
+  "pli-tv-bu-vb-pj4:1.1.7": "and get almsfood without trouble?” ",
   "pli-tv-bu-vb-pj4:1.1.8": "Some said, ",
   "pli-tv-bu-vb-pj4:1.1.9": "“We could work for the householders, ",
   "pli-tv-bu-vb-pj4:1.1.10": "and they’ll support us in return.” ",
