Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc8_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc8_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc8_translation-en-brahmali.json
@@ -34,7 +34,7 @@
   "pli-tv-bu-vb-pc8:1.2.7": "Since it is the custom for Buddhas to greet newly arrived monks, ",
   "pli-tv-bu-vb-pc8:1.2.8": "the Buddha said to them, ",
   "pli-tv-bu-vb-pc8:1.2.9": "“I hope you’re keeping well, monks, I hope you’re getting by. ",
-  "pli-tv-bu-vb-pc8:1.2.10": "I hope you have a comfortable and harmonious rains, and got almsfood without trouble?” ",
+  "pli-tv-bu-vb-pc8:1.2.10": "I hope you had a comfortable and harmonious rains, and got almsfood without trouble?” ",
   "pli-tv-bu-vb-pc8:1.2.11": "“We’re keeping well, Venerable Sir, we’re getting by. ",
   "pli-tv-bu-vb-pc8:1.2.12": "We had a comfortable and harmonious rains, and got almsfood without trouble.” ",
   "pli-tv-bu-vb-pc8:1.2.13": "When Buddhas know what is going on, sometimes they ask and sometimes not. ",
