Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -217,7 +217,7 @@
   "ja-name:216.ja194": "Der Juwelendieb ",
   "ja-name:217.ja195": "Im Schutz eines Berges ",
   "ja-name:218.ja196": "Das geflügelte Pferd ",
-  "ja-name:219.ja197": "Freunde und Feinde ",
+  "ja-name:219.ja197": "Freund und Feind ",
   "ja-name:220.ja198": "Rādha der Papagei ",
   "ja-name:221.ja199": "Der Hausbesitzer ",
   "ja-name:222.ja200": "Gut ist die Ethik ",
