--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -6,7 +6,7 @@
   "pli-tv-kd4:1.1.1": "At one time the Buddha was staying at Sāvatthī in the Jeta Grove, Anāthapiṇḍika’s Monastery. ",
   "pli-tv-kd4:1.1.2": "At that time in a certain monastery in the Kosalan country a number of monks who were friends had entered rainy-season residence together. ",
   "pli-tv-kd4:1.1.3": "They thought, ",
-  "pli-tv-kd4:1.1.4": "“How can we have a comfortable and harmonious rains, and get almsfood without trouble?” ",
+  "pli-tv-kd4:1.1.4": "“How can we have a comfortable rains, live in peace and harmony, and get almsfood without trouble?” ",
   "pli-tv-kd4:1.2.1": "Then it occurred to them, ",
   "pli-tv-kd4:1.2.2": "“Let’s not talk to one another. ",
   "pli-tv-kd4:1.2.3": "Whoever returns first from almsround in the village should prepare the seats, and set out a foot stool, a foot scraper, and water for washing the feet. He should wash the bowl for leftovers and put it out, and set out water for drinking and water for washing. ",
