--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -15,7 +15,7 @@
   "pli-tv-kd4:1.4.1": "Whoever sees that the pot for drinking water, the pot for washing water, or the water pot in the restroom is empty should fill it. ",
   "pli-tv-kd4:1.4.2": "If he can’t do it by himself, he should call someone over by hand signal, and they should fill it together. ",
   "pli-tv-kd4:1.4.3": "He should not speak because of that. ",
-  "pli-tv-kd4:1.4.4": "In this way we’ll have a comfortable and harmonious rains, and get almsfood without trouble.” ",
+  "pli-tv-kd4:1.4.4": "In this way we’ll have a comfortable rains, live in peace and harmony, and get almsfood without trouble.” ",
   "pli-tv-kd4:1.5.1": "And they did just that. ",
   "pli-tv-kd4:1.8.1": "Now it was the custom for monks who had completed the rainy-season residence to go and see the Buddha. ",
   "pli-tv-kd4:1.8.2": "And so, when the three months were over and they had completed the rains residence, they put their dwellings in order, took their bowls and robes, and set out for Sāvatthī. ",
