Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc8_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc8_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc8_translation-en-brahmali.json
@@ -42,7 +42,7 @@
   "pli-tv-bu-vb-pc8:1.2.15": "Buddhas ask when it is beneficial, otherwise not, ",
   "pli-tv-bu-vb-pc8:1.2.16": "for Buddhas are incapable of doing what is unbeneficial. ",
   "pli-tv-bu-vb-pc8:1.2.17": "Buddhas question the monks for two reasons: to give a teaching or to lay down a training rule. ",
-  "pli-tv-bu-vb-pc8:1.2.18": "And the Buddha said to those monks, “In what way, monks, did you have a comfortable and harmonious rains, getting almsfood without trouble?” ",
+  "pli-tv-bu-vb-pc8:1.2.18": "And the Buddha said to those monks, “In what way, monks, did you have a comfortable and harmonious rains? And how did you get almsfood without trouble?” ",
   "pli-tv-bu-vb-pc8:1.2.19": "They then told him. ",
   "pli-tv-bu-vb-pc8:1.2.20": "“But did you really have those superhuman qualities?” ",
   "pli-tv-bu-vb-pc8:1.2.21": "“Yes, Sir.” ",
