Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pj/pli-tv-bu-vb-pj4_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pj/pli-tv-bu-vb-pj4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pj/pli-tv-bu-vb-pj4_translation-en-brahmali.json
@@ -63,7 +63,7 @@
   "pli-tv-bu-vb-pj4:1.2.12": "When Buddhas know what is going on, sometimes they ask and sometimes not. They know the right time to ask and when not to ask. Buddhas ask when it is beneficial, otherwise not, for Buddhas are incapable of doing what is unbeneficial. ",
   "pli-tv-bu-vb-pj4:1.2.13": "Buddhas question the monks for two reasons: to give a teaching or to lay down a training rule. ",
   "pli-tv-bu-vb-pj4:1.2.14": "And the Buddha said to those monks, ",
-  "pli-tv-bu-vb-pj4:1.2.15": "“In what way, monks, did you have a comfortable and harmonious rains, getting almsfood without trouble?” ",
+  "pli-tv-bu-vb-pj4:1.2.15": "“In what way, monks, did you have a comfortable and harmonious rains? And how did you get almsfood without trouble?” ",
   "pli-tv-bu-vb-pj4:1.2.16": "They then told him. ",
   "pli-tv-bu-vb-pj4:1.2.17": "“But did you really have those superhuman qualities?” ",
   "pli-tv-bu-vb-pj4:1.2.18": "“No, Sir.” ",
