Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -220,7 +220,7 @@
   "ja-name:219.ja197": "Freund und Feind ",
   "ja-name:220.ja198": "Rādha der Papagei ",
   "ja-name:221.ja199": "Der Hausbesitzer ",
-  "ja-name:222.ja200": "Gut ist die Ethik ",
+  "ja-name:222.ja200": "Gut ist die Tugend ",
   "ja-name:223.ja-natamdalhavagga": "Das ist nicht stark ",
   "ja-name:224.ja201": "Das Gefängnis ",
   "ja-name:225.ja202": "Der König, der den Alten übel mitspielte ",
