--- a/translation/de/sabbamitta/sutta/kn/thig/thig1.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig1.1_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig1.1:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig1.1:0.1": "Strophen der altehrwürdigen Nonnen 1.1 ",
   "thig1.1:0.2": "Das Einerbuch ",
   "thig1.1:0.3": "1.1 Eine nicht namentlich genannte Nonne (1) ",
   "thig1.1:1.0": "Ehre diesem Gesegneten, dem Vollendeten, dem vollkommen erwachten Buddha! ",
