--- a/translation/de/sabbamitta/sutta/kn/thig/thig1.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig1.4_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig1.4:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig1.4:0.1": "Strophen der altehrwürdigen Nonnen 1.4 ",
   "thig1.4:0.2": "Das Einerbuch ",
   "thig1.4:0.3": "1.4 Tissā ",
   "thig1.4:1.1": "Tissā, schule dich in den Schulungen, ",
