--- a/translation/de/sabbamitta/sutta/kn/thig/thig1.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig1.5_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig1.5:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig1.5:0.1": "Strophen der altehrwürdigen Nonnen 1.5 ",
   "thig1.5:0.2": "Das Einerbuch ",
   "thig1.5:0.3": "1.5 Eine andere Tissā ",
   "thig1.5:1.1": "Tissā, zeige Einsatz für gute Eigenschaften, ",
