--- a/translation/de/sabbamitta/sutta/kn/thig/thig1.8_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig1.8_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig1.8:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig1.8:0.1": "Strophen der altehrwürdigen Nonnen 1.8 ",
   "thig1.8:0.2": "Das Einerbuch ",
   "thig1.8:0.3": "1.8 Mittā (1) ",
   "thig1.8:1.1": "Aus Vertrauen bist du fortgezogen, ",
