--- a/translation/de/sabbamitta/sutta/kn/thig/thig1.9_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig1.9_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig1.9:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig1.9:0.1": "Strophen der altehrwürdigen Nonnen 1.9 ",
   "thig1.9:0.2": "Das Einerbuch ",
   "thig1.9:0.3": "1.9 Bhadrā ",
   "thig1.9:1.1": "Aus Vertrauen bist du fortgezogen, ",
