--- a/translation/de/sabbamitta/sutta/kn/thig/thig1.11_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig1.11_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig1.11:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig1.11:0.1": "Strophen der altehrwürdigen Nonnen 1.11 ",
   "thig1.11:0.2": "Das Einerbuch ",
   "thig1.11:0.3": "1.11 Muttā (2) ",
   "thig1.11:1.1": "Ich bin gut befreit, wirklich so gut befreit! ",
