--- a/translation/de/sabbamitta/sutta/kn/thig/thig1.12_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig1.12_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig1.12:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig1.12:0.1": "Strophen der altehrwürdigen Nonnen 1.12 ",
   "thig1.12:0.2": "Das Einerbuch ",
   "thig1.12:0.3": "1.12 Dhammadinnā ",
   "thig1.12:1.1": "Eine, die begierig und entschlossen ist, ",
