--- a/translation/de/sabbamitta/sutta/kn/thig/thig1.13_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig1.13_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig1.13:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig1.13:0.1": "Strophen der altehrwürdigen Nonnen 1.13 ",
   "thig1.13:0.2": "Das Einerbuch ",
   "thig1.13:0.3": "1.13 Visākhā ",
   "thig1.13:1.1": "Erfülle die Anweisung des Buddha, ",
