--- a/translation/de/sabbamitta/sutta/kn/thig/thig1.15_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig1.15_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig1.15:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig1.15:0.1": "Strophen der altehrwürdigen Nonnen 1.15 ",
   "thig1.15:0.2": "Das Einerbuch ",
   "thig1.15:0.3": "1.15 Uttarā ",
   "thig1.15:1.1": "Gezügelt war ich ",
