--- a/translation/de/sabbamitta/sutta/kn/thig/thig1.16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig1.16_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig1.16:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig1.16:0.1": "Strophen der altehrwürdigen Nonnen 1.16 ",
   "thig1.16:0.2": "Das Einerbuch ",
   "thig1.16:0.3": "1.16 Sumanā, die spät im Leben fortzog ",
   "thig1.16:1.1": "Schlafe sanft, alte Dame, ",
