--- a/translation/de/sabbamitta/sutta/kn/thig/thig1.17_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig1.17_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig1.17:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig1.17:0.1": "Strophen der altehrwürdigen Nonnen 1.17 ",
   "thig1.17:0.2": "Das Einerbuch ",
   "thig1.17:0.3": "1.17 Dhammā ",
   "thig1.17:1.1": "Ich zog um Almosen umher ",
