--- a/translation/de/sabbamitta/sutta/kn/thig/thig1.18_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig1.18_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig1.18:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig1.18:0.1": "Strophen der altehrwürdigen Nonnen 1.18 ",
   "thig1.18:0.2": "Das Einerbuch ",
   "thig1.18:0.3": "1.18 Saṅghā ",
   "thig1.18:1.1": "Ich gab mein Zuhause auf, mein Kind, mein Vieh ",
