--- a/translation/de/sabbamitta/sutta/kn/thig/thig2.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig2.3_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig2.3:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig2.3:0.1": "Strophen der altehrwürdigen Nonnen 2.3 ",
   "thig2.3:0.2": "Das Zweierbuch ",
   "thig2.3:0.3": "2.3 Sumaṅgalas Mutter ",
   "thig2.3:1.1": "Gut befreit! Gut befreit! ",
