--- a/translation/de/sabbamitta/sutta/kn/thig/thig2.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig2.4_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig2.4:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig2.4:0.1": "Strophen der altehrwürdigen Nonnen 2.4 ",
   "thig2.4:0.2": "Das Zweierbuch ",
   "thig2.4:0.3": "2.4 Aḍḍhakāsi ",
   "thig2.4:1.1": "Der Preis für meine Dienste ",
