--- a/translation/de/sabbamitta/sutta/kn/thig/thig2.7_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig2.7_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig2.7:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig2.7:0.1": "Strophen der altehrwürdigen Nonnen 2.7 ",
   "thig2.7:0.2": "Das Zweierbuch ",
   "thig2.7:0.3": "2.7 Mittā (2) ",
   "thig2.7:1.1": "Ich erfreute mich bei der Götterschar: ",
