--- a/translation/de/sabbamitta/sutta/kn/thig/thig2.8_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig2.8_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig2.8:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig2.8:0.1": "Strophen der altehrwürdigen Nonnen 2.8 ",
   "thig2.8:0.2": "Das Zweierbuch ",
   "thig2.8:0.3": "2.8 Zu Abhayās Mutter von ihrer Tochter ",
   "thig2.8:1.1": "Meine liebe Mutter, von den Fußsohlen aufwärts ",
