--- a/translation/de/sabbamitta/sutta/kn/thig/thig2.9_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig2.9_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig2.9:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig2.9:0.1": "Strophen der altehrwürdigen Nonnen 2.9 ",
   "thig2.9:0.2": "Das Zweierbuch ",
   "thig2.9:0.3": "2.9 Abhayā ",
   "thig2.9:1.1": "Abhayā, der Körper ist zerbrechlich, ",
