--- a/translation/de/sabbamitta/sutta/kn/thig/thig2.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig2.10_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig2.10:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig2.10:0.1": "Strophen der altehrwürdigen Nonnen 2.10 ",
   "thig2.10:0.2": "Das Zweierbuch ",
   "thig2.10:0.3": "2.10 Sāmā ",
   "thig2.10:1.1": "Fünf oder sechsmal ",
