--- a/translation/de/sabbamitta/sutta/kn/thig/thig3.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig3.1_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig3.1:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig3.1:0.1": "Strophen der altehrwürdigen Nonnen 3.1 ",
   "thig3.1:0.2": "Das Dreierbuch ",
   "thig3.1:0.3": "3.1 Eine andere Sāmā ",
   "thig3.1:1.1": "Ich wüsste nicht, dass ich ",
