Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig3.4_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig3.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig3.4_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig3.4:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig3.4:0.1": "Strophen der altehrwürdigen Nonnen 3.4 ",
   "thig3.4:0.2": "Das Dreierbuch ",
   "thig3.4:0.3": "3.4 Dantikā ",
   "thig3.4:1.1": "Ich erhob mich von meiner Meditation, ",
