Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig3.8_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig3.8_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig3.8_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig3.8:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig3.8:0.1": "Strophen der altehrwürdigen Nonnen 3.8 ",
   "thig3.8:0.2": "Das Dreierbuch ",
   "thig3.8:0.3": "3.8 Somā ",
   "thig3.8:1.1": "„Dieser Zustand ist schwer zu erreichen, ",
