Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig4.1_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig4.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig4.1_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig4.1:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig4.1:0.1": "Strophen der altehrwürdigen Nonnen 4.1 ",
   "thig4.1:0.2": "Das Viererbuch ",
   "thig4.1:0.3": "4.1 Bhaddā, die Tochter Kapilas ",
   "thig4.1:1.1": "Kassapa ist Sohn und Erbe des Buddha, ",
