--- a/translation/de/sabbamitta/sutta/kn/thig/thig5.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig5.1_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig5.1:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig5.1:0.1": "Strophen der altehrwürdigen Nonnen 5.1 ",
   "thig5.1:0.2": "Das Fünferbuch ",
   "thig5.1:0.3": "5.1 Eine nicht namentlich genannte Nonne (2) ",
   "thig5.1:1.1": "In den fünfundzwanzig Jahren ",
