Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig5.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig5.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig5.2_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig5.2:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig5.2:0.1": "Strophen der altehrwürdigen Nonnen 5.2 ",
   "thig5.2:0.2": "Das Fünferbuch ",
   "thig5.2:0.3": "5.2 Vimalā, die ehemalige Kurtisane ",
   "thig5.2:1.1": "Von meinem Äußeren berauscht, ",
