--- a/translation/de/sabbamitta/sutta/kn/thig/thig5.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig5.3_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig5.3:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig5.3:0.1": "Strophen der altehrwürdigen Nonnen 5.3 ",
   "thig5.3:0.2": "Das Fünferbuch ",
   "thig5.3:0.3": "5.3 Sīhā ",
   "thig5.3:1.1": "Weil meine Aufmerksamkeit unkorrekt war, ",
