--- a/translation/de/sabbamitta/sutta/kn/thig/thig5.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig5.4_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig5.4:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig5.4:0.1": "Strophen der altehrwürdigen Nonnen 5.4 ",
   "thig5.4:0.2": "Das Fünferbuch ",
   "thig5.4:0.3": "5.4 Sundarīnandā ",
   "thig5.4:1.1": "„Nandā, betrachte diesen Knochensack ",
