--- a/translation/de/sabbamitta/sutta/kn/thig/thig5.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig5.5_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig5.5:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig5.5:0.1": "Strophen der altehrwürdigen Nonnen 5.5 ",
   "thig5.5:0.2": "Das Fünferbuch ",
   "thig5.5:0.3": "5.5 Nanduttarā ",
   "thig5.5:1.1": "Früher habe ich die heilige Flamme, ",
