Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig5.6_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig5.6_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig5.6_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig5.6:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig5.6:0.1": "Strophen der altehrwürdigen Nonnen 5.6 ",
   "thig5.6:0.2": "Das Fünferbuch ",
   "thig5.6:0.3": "5.6 Mittākāḷī ",
   "thig5.6:1.1": "Aus Vertrauen war ich fortgezogen ",
