Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig5.7_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig5.7_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig5.7_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig5.7:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig5.7:0.1": "Strophen der altehrwürdigen Nonnen 5.7 ",
   "thig5.7:0.2": "Das Fünferbuch ",
   "thig5.7:0.3": "5.7 Sakulā ",
   "thig5.7:1.1": "Während ich im Haus lebte, ",
