Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig5.8_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig5.8_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig5.8_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig5.8:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig5.8:0.1": "Strophen der altehrwürdigen Nonnen 5.8 ",
   "thig5.8:0.2": "Das Fünferbuch ",
   "thig5.8:0.3": "5.8 Soṇā ",
   "thig5.8:1.1": "Zehn Söhne brachte ich zur Welt ",
