--- a/translation/de/sabbamitta/sutta/kn/thig/thig5.11_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig5.11_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig5.11:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig5.11:0.1": "Strophen der altehrwürdigen Nonnen 5.11 ",
   "thig5.11:0.2": "Das Fünferbuch ",
   "thig5.11:0.3": "5.11 Dreißig Nonnen ",
   "thig5.11:1.1": "„Junge Männer nehmen einen Stößel ",
