Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig5.12_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig5.12_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig5.12_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig5.12:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig5.12:0.1": "Strophen der altehrwürdigen Nonnen 5.12 ",
   "thig5.12:0.2": "Das Fünferbuch ",
   "thig5.12:0.3": "5.12 Candā ",
   "thig5.12:1.1": "Ich war in einem bemitleidenswerten Zustand. ",
