--- a/translation/de/sabbamitta/sutta/kn/thig/thig6.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig6.1_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig6.1:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig6.1:0.1": "Strophen der altehrwürdigen Nonnen 6.1 ",
   "thig6.1:0.2": "Das Sechserbuch ",
   "thig6.1:0.3": "6.1 Paṭācārā, die eine Gefolgschaft von fünfhundert hatte ",
   "thig6.1:1.1": "„Ihn, dessen Pfad du nicht kennst, ",
