Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig6.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig6.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig6.2_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig6.2:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig6.2:0.1": "Strophen der altehrwürdigen Nonnen 6.2 ",
   "thig6.2:0.2": "Das Sechserbuch ",
   "thig6.2:0.3": "6.2 Vāseṭṭhī ",
   "thig6.2:1.1": "Vom Kummer um meinen Sohn niedergeschlagen, ",
