--- a/translation/de/sabbamitta/sutta/kn/thig/thig6.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig6.3_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig6.3:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig6.3:0.1": "Strophen der altehrwürdigen Nonnen 6.3 ",
   "thig6.3:0.2": "Das Sechserbuch ",
   "thig6.3:0.3": "6.3 Khemā ",
   "thig6.3:1.1": "„Du bist so jung und schön, ",
