Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig6.4_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig6.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig6.4_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig6.4:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig6.4:0.1": "Strophen der altehrwürdigen Nonnen 6.4 ",
   "thig6.4:0.2": "Das Sechserbuch ",
   "thig6.4:0.3": "6.4 Sujātā ",
   "thig6.4:1.1": "Ich war mit Juwelen geschmückt und herausgeputzt, ",
