--- a/translation/de/sabbamitta/sutta/kn/thig/thig6.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig6.5_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig6.5:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig6.5:0.1": "Strophen der altehrwürdigen Nonnen 6.5 ",
   "thig6.5:0.2": "Das Sechserbuch ",
   "thig6.5:0.3": "6.5 Anopamā ",
   "thig6.5:1.1": "Ich wurde in eine bedeutende Familie hineingeboren, ",
