Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig6.7_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig6.7_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig6.7_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig6.7:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig6.7:0.1": "Strophen der altehrwürdigen Nonnen 6.7 ",
   "thig6.7:0.2": "Das Sechserbuch ",
   "thig6.7:0.3": "6.7 Guttā ",
   "thig6.7:1.1": "Guttā, du hast dein Kind aufgegeben, ",
