--- a/translation/de/sabbamitta/sutta/kn/thig/thig7.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig7.1_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig7.1:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig7.1:0.1": "Strophen der altehrwürdigen Nonnen 7.1 ",
   "thig7.1:0.2": "Das Siebenerbuch ",
   "thig7.1:0.3": "7.1 Uttarā (2) ",
   "thig7.1:1.1": "„Junge Männer nehmen einen Stößel ",
