Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig7.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig7.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig7.2_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig7.2:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig7.2:0.1": "Strophen der altehrwürdigen Nonnen 7.2 ",
   "thig7.2:0.2": "Das Siebenerbuch ",
   "thig7.2:0.3": "7.2 Cālā ",
   "thig7.2:1.1": "„Als Nonne mit entwickelten Fähigkeiten ",
