Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig7.3_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig7.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig7.3_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig7.3:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig7.3:0.1": "Strophen der altehrwürdigen Nonnen 7.3 ",
   "thig7.3:0.2": "Das Siebenerbuch ",
   "thig7.3:0.3": "7.3 Upacālā ",
   "thig7.3:1.1": "„Als Nonne mit entwickelten Fähigkeiten, ",
