Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig8.1_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig8.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig8.1_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig8.1:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig8.1:0.1": "Strophen der altehrwürdigen Nonnen 8.1 ",
   "thig8.1:0.2": "Das Achterbuch ",
   "thig8.1:0.3": "8.1 Sīsūpacālā ",
   "thig8.1:1.1": "„Eine Nonne, die das sittliche Verhalten vervollkommnet hat, ",
