Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig9.1_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig9.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig9.1_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig9.1:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig9.1:0.1": "Strophen der altehrwürdigen Nonnen 9.1 ",
   "thig9.1:0.2": "Das Neunerbuch ",
   "thig9.1:0.3": "9.1 Vaḍḍhas Mutter ",
   "thig9.1:1.1": "„Vaḍḍha, bitte lass dich niemals ",
