Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig10.1_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig10.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig10.1_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig10.1:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig10.1:0.1": "Strophen der altehrwürdigen Nonnen 10.1 ",
   "thig10.1:0.2": "Das Elferbuch ",
   "thig10.1:0.3": "10.1 Kisāgotamī ",
   "thig10.1:1.1": "„Die Abgeklärten loben gute Freundschaft, ",
