--- a/translation/de/sabbamitta/sutta/kn/thig/thig11.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig11.1_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig11.1:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig11.1:0.1": "Strophen der altehrwürdigen Nonnen 11.1 ",
   "thig11.1:0.2": "Das Zwölferbuch ",
   "thig11.1:0.3": "11.1 Uppalavaṇṇā ",
   "thig11.1:1.1": "„Obwohl wir Mutter und Tochter waren, ",
