Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig12.1_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig12.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig12.1_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig12.1:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig12.1:0.1": "Strophen der altehrwürdigen Nonnen 12.1 ",
   "thig12.1:0.2": "Das Sechzehnerbuch ",
   "thig12.1:0.3": "12.1 Puṇṇikā ",
   "thig12.1:1.1": "„Ich war eine Wasserträgerin. Selbst wenn es kalt war, ",
