Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig13.1_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig13.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig13.1_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig13.1:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig13.1:0.1": "Strophen der altehrwürdigen Nonnen 13.1 ",
   "thig13.1:0.2": "Das Zwanzigerbuch ",
   "thig13.1:0.3": "13.1 Ambapālī ",
   "thig13.1:1.1": "Schwarz, von der Farbe der Bienen, war mein Haar, ",
