Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig13.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig13.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig13.2_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig13.2:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig13.2:0.1": "Strophen der altehrwürdigen Nonnen 13.2 ",
   "thig13.2:0.2": "Das Zwanzigerbuch ",
   "thig13.2:0.3": "13.2 Rohinī ",
   "thig13.2:1.1": "„Mit ‚Asketen‘ auf den Lippen bist du eingeschlafen, ",
