--- a/translation/de/sabbamitta/sutta/kn/thig/thig13.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig13.3_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig13.3:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig13.3:0.1": "Strophen der altehrwürdigen Nonnen 13.3 ",
   "thig13.3:0.2": "Das Zwanzigerbuch ",
   "thig13.3:0.3": "13.3 Cāpā ",
   "thig13.3:1.1": "„Einst trug ich den Stab eines Eremiten, ",
