Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig13.5_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig13.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig13.5_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig13.5:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig13.5:0.1": "Strophen der altehrwürdigen Nonnen 13.5 ",
   "thig13.5:0.2": "Das Zwanzigerbuch ",
   "thig13.5:0.3": "13.5 Subhā, die Tochter des Schmieds ",
   "thig13.5:1.1": "„Ich war so jung, meine Kleider rein, ",
