Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig14.1_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig14.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig14.1_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig14.1:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig14.1:0.1": "Strophen der altehrwürdigen Nonnen 14.1 ",
   "thig14.1:0.2": "Das Dreißigerbuch ",
   "thig14.1:0.3": "14.1 Subhā von Jīvakas Mangowäldchen ",
   "thig14.1:1.1": "Auf dem Weg zu Jīvakas entzückendem Mangowäldchen ",
