Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig15.1_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig15.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig15.1_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig15.1:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig15.1:0.1": "Strophen der altehrwürdigen Nonnen 15.1 ",
   "thig15.1:0.2": "Das Vierzigerbuch ",
   "thig15.1:0.3": "15.1 Isidāsī ",
   "thig15.1:1.1": "In der Stadt mit einem Blumennamen, ",
