Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig16.1_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig16.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig16.1_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "thig16.1:0.1": "Strophen der altehrwürdigen Nonnen ",
+  "thig16.1:0.1": "Strophen der altehrwürdigen Nonnen 16.1 ",
   "thig16.1:0.2": "Das große Buch ",
   "thig16.1:0.3": "16.1 Sumedhā ",
   "thig16.1:1.1": "In der Stadt Mantāvatī wurde Sumedhā, ",
