--- a/translation/de/sabbamitta/sutta/kn/ud/vagga1/ud1.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga1/ud1.3_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud1.3:0.1": "Innige Sprüche ",
+  "ud1.3:0.1": "Innige Sprüche 1.3 ",
   "ud1.3:0.2": "1.3 Beim Erwachen (3) ",
   "ud1.3:1.1": "So habe ich es gehört: ",
   "ud1.3:1.2": "Einmal, als er eben erwacht war, hielt sich der Buddha bei Uruvelā am Fuß des Baums des Erwachens auf, am Ufer des Flusses Nerañjarā. ",
