--- a/translation/de/sabbamitta/sutta/kn/ud/vagga1/ud1.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga1/ud1.4_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud1.4:0.1": "Innige Sprüche ",
+  "ud1.4:0.1": "Innige Sprüche 1.4 ",
   "ud1.4:0.2": "1.4 Weinerlich ",
   "ud1.4:1.1": "So habe ich es gehört: ",
   "ud1.4:1.2": "Einmal, als er eben erwacht war, hielt sich der Buddha bei Uruvelā beim Banyanbaum des Ziegenhirten auf, am Ufer des Flusses Nerañjarā. ",
