--- a/translation/de/sabbamitta/sutta/kn/ud/vagga1/ud1.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga1/ud1.5_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud1.5:0.1": "Innige Sprüche ",
+  "ud1.5:0.1": "Innige Sprüche 1.5 ",
   "ud1.5:0.2": "1.5 Der Brahmane ",
   "ud1.5:1.1": "So habe ich es gehört: ",
   "ud1.5:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
