Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga1/ud1.6_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga1/ud1.6_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga1/ud1.6_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud1.6:0.1": "Innige Sprüche ",
+  "ud1.6:0.1": "Innige Sprüche 1.6 ",
   "ud1.6:0.2": "1.6 Mit Mahākassapa ",
   "ud1.6:1.1": "So habe ich es gehört: ",
   "ud1.6:1.2": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. ",
