--- a/translation/de/sabbamitta/sutta/kn/ud/vagga1/ud1.8_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga1/ud1.8_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud1.8:0.1": "Innige Sprüche ",
+  "ud1.8:0.1": "Innige Sprüche 1.8 ",
   "ud1.8:0.2": "1.8 Mit Saṅgāmaji ",
   "ud1.8:1.1": "So habe ich es gehört: ",
   "ud1.8:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
