--- a/translation/de/sabbamitta/sutta/kn/ud/vagga1/ud1.9_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga1/ud1.9_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud1.9:0.1": "Innige Sprüche ",
+  "ud1.9:0.1": "Innige Sprüche 1.9 ",
   "ud1.9:0.2": "1.9 Filzhaarasketen ",
   "ud1.9:1.1": "So habe ich es gehört: ",
   "ud1.9:1.2": "Einmal hielt sich der Buddha bei Gayā auf dem Gayā-Kopf auf. ",
