--- a/translation/de/sabbamitta/sutta/kn/ud/vagga1/ud1.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga1/ud1.10_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud1.10:0.1": "Innige Sprüche ",
+  "ud1.10:0.1": "Innige Sprüche 1.10 ",
   "ud1.10:0.2": "1.10 Mit Bāhiya ",
   "ud1.10:1.1": "So habe ich es gehört: ",
   "ud1.10:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
