--- a/translation/de/sabbamitta/sutta/kn/ud/vagga2/ud2.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga2/ud2.1_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud2.1:0.1": "Innige Sprüche ",
+  "ud2.1:0.1": "Innige Sprüche 2.1 ",
   "ud2.1:0.2": "2.1 Mit Mucalinda ",
   "ud2.1:1.1": "So habe ich es gehört: ",
   "ud2.1:1.2": "Einmal, als er eben erwacht war, hielt sich der Buddha bei Uruvelā am Fuß des Mucalindabaums auf, am Ufer des Flusses Nerañjarā. ",
