--- a/translation/de/sabbamitta/sutta/kn/ud/vagga2/ud2.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga2/ud2.3_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud2.3:0.1": "Innige Sprüche ",
+  "ud2.3:0.1": "Innige Sprüche 2.3 ",
   "ud2.3:0.2": "2.3 Ein Stock ",
   "ud2.3:1.1": "So habe ich es gehört: ",
   "ud2.3:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
