--- a/translation/de/sabbamitta/sutta/kn/ud/vagga2/ud2.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga2/ud2.4_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud2.4:0.1": "Innige Sprüche ",
+  "ud2.4:0.1": "Innige Sprüche 2.4 ",
   "ud2.4:0.2": "2.4 Wertschätzung ",
   "ud2.4:1.1": "So habe ich es gehört: ",
   "ud2.4:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
