Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga2/ud2.7_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga2/ud2.7_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga2/ud2.7_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud2.7:0.1": "Innige Sprüche ",
+  "ud2.7:0.1": "Innige Sprüche 2.7 ",
   "ud2.7:0.2": "2.7 Einziges Kind ",
   "ud2.7:1.1": "So habe ich es gehört: ",
   "ud2.7:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
