--- a/translation/de/sabbamitta/sutta/kn/ud/vagga2/ud2.8_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga2/ud2.8_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud2.8:0.1": "Innige Sprüche ",
+  "ud2.8:0.1": "Innige Sprüche 2.8 ",
   "ud2.8:0.2": "2.8 Suppavāsā ",
   "ud2.8:1.1": "So habe ich es gehört: ",
   "ud2.8:1.2": "Einmal hielt sich der Buddha bei Kuṇḍiyā im Kuṇḍadhāna-Wäldchen auf. ",
