--- a/translation/de/sabbamitta/sutta/kn/ud/vagga2/ud2.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga2/ud2.10_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud2.10:0.1": "Innige Sprüche ",
+  "ud2.10:0.1": "Innige Sprüche 2.10 ",
   "ud2.10:0.2": "2.10 Mit Bhaddiya ",
   "ud2.10:1.1": "So habe ich es gehört: ",
   "ud2.10:1.2": "Einmal hielt sich der Buddha bei Anupiya in einem Mangowäldchen auf. ",
