--- a/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.1_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud3.1:0.1": "Innige Sprüche ",
+  "ud3.1:0.1": "Innige Sprüche 3.1 ",
   "ud3.1:0.2": "3.1 Aus den Früchten der Taten geboren ",
   "ud3.1:1.1": "So habe ich es gehört: ",
   "ud3.1:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
