--- a/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.2_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud3.2:0.1": "Innige Sprüche ",
+  "ud3.2:0.1": "Innige Sprüche 3.2 ",
   "ud3.2:0.2": "3.2. Mit Nanda ",
   "ud3.2:1.1": "So habe ich es gehört: ",
   "ud3.2:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
