Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.3_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.3_translation-de-sabbamitta.json
@@ -1,6 +1,6 @@
 {
   "ud3.3:0.1": "Innige Sprüche 3.3 ",
-  "ud3.3:0.2": "3.3 Mit Yasoja ",
+  "ud3.3:0.2": "Mit Yasoja ",
   "ud3.3:1.1": "So habe ich es gehört: ",
   "ud3.3:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
   "ud3.3:1.3": "Nun kamen zu dieser Zeit gerade fünfhundert Mönche und Nonnen mit Yasoja an der Spitze in Sāvatthī an, um den Buddha zu sehen. ",
