--- a/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.6_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.6_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud3.6:0.1": "Innige Sprüche ",
+  "ud3.6:0.1": "Innige Sprüche 3.6 ",
   "ud3.6:0.2": "3.6 Mit Pilindavaccha ",
   "ud3.6:1.1": "So habe ich es gehört: ",
   "ud3.6:1.2": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. ",
