Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.7_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.7_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.7_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud3.7:0.1": "Innige Sprüche ",
+  "ud3.7:0.1": "Innige Sprüche 3.7 ",
   "ud3.7:0.2": "3.7 Sakkas inniger Spruch ",
   "ud3.7:1.1": "So habe ich es gehört: ",
   "ud3.7:1.2": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. ",
