Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.9_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.9_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.9_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud3.9:0.1": "Innige Sprüche ",
+  "ud3.9:0.1": "Innige Sprüche 3.9 ",
   "ud3.9:0.2": "3.9 Fertigkeit ",
   "ud3.9:1.1": "So habe ich es gehört: ",
   "ud3.9:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
