--- a/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga3/ud3.10_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud3.10:0.1": "Innige Sprüche ",
+  "ud3.10:0.1": "Innige Sprüche 3.10 ",
   "ud3.10:0.2": "3.10 Die Welt ",
   "ud3.10:1.1": "So habe ich es gehört: ",
   "ud3.10:1.2": "Einmal, als er eben erwacht war, hielt sich der Buddha bei Uruvelā am Fuß des Baums des Erwachens auf, am Ufer des Flusses Nerañjarā. ",
