--- a/translation/de/sabbamitta/sutta/kn/ud/vagga4/ud4.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga4/ud4.1_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud4.1:0.1": "Innige Sprüche ",
+  "ud4.1:0.1": "Innige Sprüche 4.1 ",
   "ud4.1:0.2": "4.1 Mit Meghiya ",
   "ud4.1:1.1": "So habe ich es gehört: ",
   "ud4.1:1.2": "Einmal hielt sich der Buddha bei Cālikā auf dem Berg Cālikā auf. ",
