--- a/translation/de/sabbamitta/sutta/kn/ud/vagga4/ud4.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga4/ud4.2_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud4.2:0.1": "Innige Sprüche ",
+  "ud4.2:0.1": "Innige Sprüche 4.2 ",
   "ud4.2:0.2": "4.2 Rastlos ",
   "ud4.2:1.1": "So habe ich es gehört: ",
   "ud4.2:1.2": "Einmal hielt sich der Buddha in einem Salbaumwald der Maller in Upavattana bei Kusinārā auf. ",
