--- a/translation/de/sabbamitta/sutta/kn/ud/vagga4/ud4.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga4/ud4.4_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud4.4:0.1": "Innige Sprüche ",
+  "ud4.4:0.1": "Innige Sprüche 4.4 ",
   "ud4.4:0.2": "4.4 Der Hieb des Geistes ",
   "ud4.4:1.1": "So habe ich es gehört: ",
   "ud4.4:1.2": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. ",
