--- a/translation/de/sabbamitta/sutta/kn/ud/vagga4/ud4.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga4/ud4.5_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud4.5:0.1": "Innige Sprüche ",
+  "ud4.5:0.1": "Innige Sprüche 4.5 ",
   "ud4.5:0.2": "4.5 Ein Elefantenbulle ",
   "ud4.5:1.1": "So habe ich es gehört: ",
   "ud4.5:1.2": "Einmal hielt sich der Buddha bei Kosambi auf, in Ghositas Kloster. ",
