Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga4/ud4.6_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga4/ud4.6_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga4/ud4.6_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud4.6:0.1": "Innige Sprüche ",
+  "ud4.6:0.1": "Innige Sprüche 4.6 ",
   "ud4.6:0.2": "4.6 Der Almosensammler ",
   "ud4.6:1.1": "So habe ich es gehört: ",
   "ud4.6:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
