--- a/translation/de/sabbamitta/sutta/kn/ud/vagga4/ud4.7_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga4/ud4.7_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud4.7:0.1": "Innige Sprüche ",
+  "ud4.7:0.1": "Innige Sprüche 4.7 ",
   "ud4.7:0.2": "4.7 Mit Sāriputta ",
   "ud4.7:1.1": "So habe ich es gehört: ",
   "ud4.7:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
