--- a/translation/de/sabbamitta/sutta/kn/ud/vagga4/ud4.8_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga4/ud4.8_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud4.8:0.1": "Innige Sprüche ",
+  "ud4.8:0.1": "Innige Sprüche 4.8 ",
   "ud4.8:0.2": "4.8 Mit Sundarī ",
   "ud4.8:1.1": "So habe ich es gehört: ",
   "ud4.8:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
