--- a/translation/de/sabbamitta/sutta/kn/ud/vagga4/ud4.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga4/ud4.10_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud4.10:0.1": "Innige Sprüche ",
+  "ud4.10:0.1": "Innige Sprüche 4.10 ",
   "ud4.10:0.2": "4.10 Der Frieden Sāriputtas ",
   "ud4.10:1.1": "So habe ich es gehört: ",
   "ud4.10:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
