--- a/translation/de/sabbamitta/sutta/kn/ud/vagga5/ud5.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga5/ud5.1_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud5.1:0.1": "Innige Sprüche ",
+  "ud5.1:0.1": "Innige Sprüche 5.1 ",
   "ud5.1:0.2": "5.1 Wer ist lieber? ",
   "ud5.1:1.1": "So habe ich es gehört: ",
   "ud5.1:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
