--- a/translation/de/sabbamitta/sutta/kn/ud/vagga5/ud5.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga5/ud5.3_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud5.3:0.1": "Innige Sprüche ",
+  "ud5.3:0.1": "Innige Sprüche 5.3 ",
   "ud5.3:0.2": "5.3 Mit Suppabuddha dem Aussätzigen ",
   "ud5.3:1.1": "So habe ich es gehört: ",
   "ud5.3:1.2": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. ",
