Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga5/ud5.5_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga5/ud5.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga5/ud5.5_translation-de-sabbamitta.json
@@ -1,6 +1,6 @@
 {
   "ud5.5:0.1": "Innige Sprüche 5.5 ",
-  "ud5.5:0.2": "5.5 Besinnungstag ",
+  "ud5.5:0.2": "Besinnungstag ",
   "ud5.5:1.1": "So habe ich es gehört: ",
   "ud5.5:1.2": "Einmal hielt sich der Buddha bei Sāvatthī im Ostkloster auf, dem Pfahlhaus der Mutter Migāras. ",
   "ud5.5:1.3": "Zu der Zeit, es war der Besinnungstag, saß der Buddha inmitten des Saṅgha der Mönche. ",
