--- a/translation/de/sabbamitta/sutta/kn/ud/vagga5/ud5.6_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga5/ud5.6_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud5.6:0.1": "Innige Sprüche ",
+  "ud5.6:0.1": "Innige Sprüche 5.6 ",
   "ud5.6:0.2": "5.6 Mit Soṇa ",
   "ud5.6:1.1": "So habe ich es gehört: ",
   "ud5.6:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
