Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga5/ud5.7_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga5/ud5.7_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga5/ud5.7_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud5.7:0.1": "Innige Sprüche ",
+  "ud5.7:0.1": "Innige Sprüche 5.7 ",
   "ud5.7:0.2": "5.7 Mit Revata dem Zweifler ",
   "ud5.7:1.1": "So habe ich es gehört: ",
   "ud5.7:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
