Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga5/ud5.9_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga5/ud5.9_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga5/ud5.9_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud5.9:0.1": "Innige Sprüche ",
+  "ud5.9:0.1": "Innige Sprüche 5.9 ",
   "ud5.9:0.2": "5.9 Sich lustig machen ",
   "ud5.9:1.1": "So habe ich es gehört: ",
   "ud5.9:1.2": "Einmal wanderte der Buddha mit einem großen Saṅgha von Mönchen und Nonnen durch das Land der Kosaler. ",
