--- a/translation/de/sabbamitta/sutta/kn/ud/vagga5/ud5.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga5/ud5.10_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud5.10:0.1": "Innige Sprüche ",
+  "ud5.10:0.1": "Innige Sprüche 5.10 ",
   "ud5.10:0.2": "5.10 Mit Cūḷapanthaka ",
   "ud5.10:1.1": "So habe ich es gehört: ",
   "ud5.10:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
