Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga6/ud6.1_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga6/ud6.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga6/ud6.1_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud6.1:0.1": "Innige Sprüche ",
+  "ud6.1:0.1": "Innige Sprüche 6.1 ",
   "ud6.1:0.2": "6.1 Die Lebenskraft aufgeben ",
   "ud6.1:1.1": "So habe ich es gehört: ",
   "ud6.1:1.2": "Einmal hielt sich der Buddha bei Vesālī am Großen Wald auf, in der Halle mit dem Giebeldach. ",
