Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga6/ud6.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga6/ud6.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga6/ud6.2_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud6.2:0.1": "Innige Sprüche ",
+  "ud6.2:0.1": "Innige Sprüche 6.2 ",
   "ud6.2:0.2": "6.2 Sieben Filzhaarasketen ",
   "ud6.2:1.1": "So habe ich es gehört: ",
   "ud6.2:1.2": "Einmal hielt sich der Buddha bei Sāvatthī im Ostkloster auf, dem Pfahlhaus der Mutter Migāras. ",
