--- a/translation/de/sabbamitta/sutta/kn/ud/vagga6/ud6.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga6/ud6.3_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud6.3:0.1": "Innige Sprüche ",
+  "ud6.3:0.1": "Innige Sprüche 6.3 ",
   "ud6.3:0.2": "6.3 Die Betrachtung des Buddha ",
   "ud6.3:1.1": "So habe ich es gehört: ",
   "ud6.3:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
