--- a/translation/de/sabbamitta/sutta/kn/ud/vagga6/ud6.6_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga6/ud6.6_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud6.6:0.1": "Innige Sprüche ",
+  "ud6.6:0.1": "Innige Sprüche 6.6 ",
   "ud6.6:0.2": "6.6 Anhänger anderer Lehren (3) ",
   "ud6.6:1.1": "So habe ich es gehört: ",
   "ud6.6:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
