Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga6/ud6.8_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga6/ud6.8_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga6/ud6.8_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud6.8:0.1": "Innige Sprüche ",
+  "ud6.8:0.1": "Innige Sprüche 6.8 ",
   "ud6.8:0.2": "6.8 Die Kurtisane ",
   "ud6.8:1.1": "So habe ich es gehört: ",
   "ud6.8:1.2": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. ",
