Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga7/ud7.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga7/ud7.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga7/ud7.2_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud7.2:0.1": "Innige Sprüche ",
+  "ud7.2:0.1": "Innige Sprüche 7.2 ",
   "ud7.2:0.2": "7.2 Bhaddiya der Zwerg (2) ",
   "ud7.2:1.1": "So habe ich es gehört: ",
   "ud7.2:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
