--- a/translation/de/sabbamitta/sutta/kn/ud/vagga7/ud7.4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga7/ud7.4_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud7.4:0.1": "Innige Sprüche ",
+  "ud7.4:0.1": "Innige Sprüche 7.4 ",
   "ud7.4:0.2": "7.4 Klammern (2) ",
   "ud7.4:1.1": "So habe ich es gehört: ",
   "ud7.4:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
