Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga7/ud7.8_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga7/ud7.8_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga7/ud7.8_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud7.8:0.1": "Innige Sprüche ",
+  "ud7.8:0.1": "Innige Sprüche 7.8 ",
   "ud7.8:0.2": "7.8 Mit Kaccāna ",
   "ud7.8:1.1": "So habe ich es gehört: ",
   "ud7.8:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
