Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga7/ud7.10_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga7/ud7.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga7/ud7.10_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud7.10:0.1": "Innige Sprüche ",
+  "ud7.10:0.1": "Innige Sprüche 7.10 ",
   "ud7.10:0.2": "7.10 Der König Udena ",
   "ud7.10:1.1": "So habe ich es gehört: ",
   "ud7.10:1.2": "Einmal hielt sich der Buddha bei Kosambi auf, in Ghositas Kloster. ",
