Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga8/ud8.1_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga8/ud8.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga8/ud8.1_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud8.1:0.1": "Innige Sprüche ",
+  "ud8.1:0.1": "Innige Sprüche 8.1 ",
   "ud8.1:0.2": "8.1 Über das Erlöschen (1) ",
   "ud8.1:1.1": "So habe ich es gehört: ",
   "ud8.1:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
