Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga8/ud8.6_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga8/ud8.6_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga8/ud8.6_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud8.6:0.1": "Innige Sprüche ",
+  "ud8.6:0.1": "Innige Sprüche 8.6 ",
   "ud8.6:0.2": "8.6 Die Laien vom Dorf Pāṭali ",
   "ud8.6:1.1": "So habe ich es gehört: ",
   "ud8.6:1.2": "Einmal wanderte der Buddha mit einem großen Saṅgha von Mönchen und Nonnen durch das Land der Magadher, da kam er zu dem Dorf Pāṭali. ",
