Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga8/ud8.8_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga8/ud8.8_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga8/ud8.8_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud8.8:0.1": "Innige Sprüche ",
+  "ud8.8:0.1": "Innige Sprüche 8.8 ",
   "ud8.8:0.2": "8.8 Mit Visākhā ",
   "ud8.8:1.1": "So habe ich es gehört: ",
   "ud8.8:1.2": "Einmal hielt sich der Buddha bei Sāvatthī im Ostkloster auf, dem Pfahlhaus der Mutter Migāras. ",
